@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.metrics;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -55,7 +54,7 @@ public class XpathRegressionBooleanExpressionComplexityTest
                     BooleanExpressionComplexityCheck.MSG_KEY, 11, 3),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF[./IDENT"
                         + "[@text='InputXpathBooleanExpressionComplexityCatchBlock']]"
                         + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='methodOne']]/SLIST"
@@ -80,7 +79,7 @@ public class XpathRegressionBooleanExpressionComplexityTest
                     BooleanExpressionComplexityCheck.MSG_KEY, 11, 3),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF[./IDENT["
                         + "@text='InputXpathBooleanExpressionComplexityClassFields']]"
                         + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='methodTwo']]/SLIST/VARIABLE_DEF"
@@ -104,7 +103,7 @@ public class XpathRegressionBooleanExpressionComplexityTest
                     BooleanExpressionComplexityCheck.MSG_KEY, 4, 3),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF[./IDENT["
                         + "@text='InputXpathBooleanExpressionComplexityConditionals']]"
                         + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='methodThree']]/SLIST/LITERAL_IF"
